--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -876,6 +876,12 @@
   display:none !important;
 }
 
+.spot-title{
+  white-space:nowrap !important;
+  overflow:hidden !important;
+  text-overflow:ellipsis !important;
+}
+
 
 
 </style>
